--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </tr>
             <tr>
               <td>1</td>
-              <td>./Hatumei1/1/</td>
+              <td><a href="./Hatumei1/1/">Go!!</a></td>
             </tr>
             <tr>
                 <td>2</td>
