--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +14,7 @@
     <section>
         <div><h2>ご案内</h2></div>
         <p>2023年6月7日:サイトを更新しました。</p>
+        <p>2023年6月8日:サイトを更新しました。</p>
     </section>
     <section>
         <h2>各班のWebサイトを紹介</h2>
@@ -29,39 +30,39 @@
             </tr>
             <tr>
                 <td>2</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/2/">Go!!</a></td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/3/">Go!!</a></td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/4/">Go!!</a></td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/5/">Go!!</a></td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/6/">Go!!</a></td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/7/">Go!!</a></td>
             </tr>
             <tr>
                 <td>8</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/8/">Go!!</a></td>
             </tr>
             <tr>
                 <td>9</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/9/">Go!!</a></td>
             </tr>
             <tr>
                 <td>10</td>
-                <td>NoDate</td>
+                <td><a href="./Hatumei1/10/">Go!!</a></td>
             </tr>
           </table>
       </section>
