--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div><h2>ご案内</h2></div>
         <p>2023年6月7日:サイトを更新しました。</p>
         <p>2023年6月8日:サイトを更新しました。</p>
+        <p>2023年6月11日:1~10にファイルをアップロードしました。</p>
     </section>
     <section>
         <h2>各班のWebサイトを紹介</h2>
